Not centered? Quick fix

--- a/_sass/jekyll-news.scss
+++ b/_sass/jekyll-news.scss
@@ -13,18 +13,6 @@ body, html {
 }
 
 
-.advert{
-  width: 500px;
-  height: fit-content;
-  background-color: red;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.center{
-text-align: center;
-}
-   
 a {
   color: $link-color;
 }
