--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -1,2 +1,15 @@
 // Placeholder file.
 // You can create this in your site repo to override any style.
+
+.advert{
+    width: 500px;
+    height: fit-content;
+    background-color: red;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .center{
+  text-align: center;
+  }
+     
